# first-cmake

./: .gitignore  CMakeLists.txt  CMakeSettings.json  readme.md  readme.txt
calculator/: CMakeLists.txt
calculator/include/: command-line-calculator.hpp
calculator/source/: command-line-calculator.cpp  main.cpp
include/: vector.hpp
math/: CMakeLists.txt
math/include/math/: math.hpp
parser/: CMakeLists.txt
parser/include/parser/: parser.hpp
parser/internal/internal/: internal.hpp
parser/source/: internal.cpp  parser.cpp
source/: first-cmake.cpp
